--- a/popup.html
+++ b/popup.html
@@ -4,12 +4,13 @@
 		<meta charset="utf-8" />
 		<style>
 			body { font-family: sans-serif; font-size: small; min-width: 15em; }
-			#online, #stat { margin-bottom: 1em; }
+			#online, #stat, #graph { margin-bottom: 1em; }
 		</style>
 	</head>
 	<body>
 		<div id="online"></div>
 		<div id="stat"></div>
+		<canvas height="100" width="300" id="graph"></canvas>
 		<div id="rating"></div>
 		<script src="popup.js"></script>
 	</body>
