--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<style>
-			body { font-family: sans-serif; font-size: small; min-width: 15em; }
-			#online, #stat, #graph { margin-bottom: 1em; }
+			body { font-family: sans-serif; font-size: small; }
+			#online, #stat, #graph { margin-bottom: 1em; display: none; }
 		</style>
 	</head>
 	<body>
+		<img id="loader" src="images/loader.gif" />
 		<div id="online"></div>
 		<div id="stat"></div>
 		<canvas height="100" width="300" id="graph"></canvas>
