--- a/popup.html
+++ b/popup.html
@@ -3,12 +3,14 @@
 	<head>
 		<meta charset="utf-8" />
 		<style>
-			body { font-family: sans-serif; font-size: small; }
-			#online, #stat, #graph { margin-bottom: 1em; display: none; }
+			body { font-family: sans-serif; font-size: small; min-width: 300px; }
+			#title, #online, #stat, #graph { margin-bottom: 1em; display: none; }
+			#title { font-weight: bold; font-size: 1.2em; }
 		</style>
 	</head>
 	<body>
 		<img id="loader" src="images/loader.gif" />
+		<div id="title"></div>
 		<div id="online"></div>
 		<div id="stat"></div>
 		<canvas height="100" width="300" id="graph"></canvas>
