--- a/popup.html
+++ b/popup.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<style>
-			body { font-family: sans-serif; font-size: small; min-width: 300px; }
+			body { font-family: sans-serif; font-size: small; }
 			#title, #online, #stat, #graph { margin-bottom: 1em; display: none; }
-			#title { font-weight: bold; font-size: 1.2em; }
+			#title { font-weight: bold; font-size: 1.2em; min-width: 300px; }
 		</style>
 	</head>
 	<body>
