Remove border around rating link

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
 			body { font-family: sans-serif; font-size: small; }
 			#title, #online, #stat, #graph { margin-bottom: 1em; display: none; }
 			#title { font-weight: bold; font-size: 1.2em; min-width: 300px; }
+			#rating a { outline: none; }
 		</style>
 	</head>
 	<body>
